package cafepos.controller.action;

public interface MainAction {
    void action();
}
