package cafepos.model.infra.logging;

public interface EventLogger {
    void append(String line);
}
