@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
top to bottom direction

class PosController {
  - sc : Scanner
  - menuData : List<MenuData>
  - curShoppingCart : ShoppingCart
  - inputView : InputView
  - outputView : OutputView
  - actions : Map<Integer, MainAction>
  - actionContext : ActionContext
  - invalidAction : MainAction
  - paymentService : PaymentService
  - logService : LogService
  + main(args : String[]) : void
  - initMenu() : void
  - start() : void
}
interface MainAction {
  + action() : void
}
class ActionContext {
  - menuData : List<MenuData>
  - cart : ShoppingCart
  - inputView : InputView
  - outputView : OutputView
  - paymentService : PaymentService
  - logService : LogService
  - receiptService : ReceiptService
  - running : boolean
  + menuList() : List<MenuData>
  + cart() : ShoppingCart
  + inputView() : InputView
  + outputView() : OutputView
  + paymentService() : PaymentService
  + logService() : LogService
  + receiptService() : ReceiptService
  + isRunning() : boolean
  + stop() : void
}
class OrderAction {
  - ctx : ActionContext
  + action() : void
}
class PayAction {
  - ctx : ActionContext
  + action() : void
}
class ExitAction {
  - ctx : ActionContext
  + action() : void
}
class InvalidAction {
  - ctx : ActionContext
  + action() : void
}

class InputView {
  + readMainMenu() : int
  + readMenuId() : int
  + readQuantity() : int
  + readForkCount() : int
  + readIceOrHot(cupNo : int) : IceOrHot
  + readIceAmount(cupNo : int) : IceAmount
  + readPaymentConfirm() : boolean
}
class OutputView {
  + printMainScreen(menuList : List<MenuData>, shoppingCart : ShoppingCart) : void
  + printMainActions() : void
  + printPaymentCompleted() : void
  + printPaymentCanceled() : void
}

interface PaymentService {
  + canPay(shoppingCart : ShoppingCart) : boolean
  + calculatePaymentPrice(shoppingCart : ShoppingCart) : int
  + processPayment(confirm : boolean) : boolean
}
class DefaultPay {
  + canPay(shoppingCart : ShoppingCart) : boolean
  + calculatePaymentPrice(shoppingCart : ShoppingCart) : int
  + processPayment(confirm : boolean) : boolean
}

interface LogService {
  + logOrder(menu : MenuData, qty : int) : void
  + logPayment(totalPrice : int) : void
  + logExit() : void
}
class DefaultLogService {
  - eventLogger : EventLogger
  + logOrder(menu : MenuData, qty : int) : void
  + logPayment(totalPrice : int) : void
  + logExit() : void
}

class ReceiptService {
  - receiptBuilder : ReceiptBuilder
  - receiptWriter : ReceiptWriter
  - storeInfo : StoreInfo
  + createReceipt(items : List<OrderItem>, totalPrice : int) : void
}
interface ReceiptBuilder {
  + build(items : List<OrderItem>, totalPrice : int, paidAt : LocalDateTime, storeInfo : StoreInfo) : String
}
class ContentBuilder {
  + build(items : List<OrderItem>, totalPrice : int, paidAt : LocalDateTime, storeInfo : StoreInfo) : String
}
interface ReceiptWriter {
  + write(content : String, paidAt : LocalDateTime) : void
}
class FileWriter {
  + write(content : String, paidAt : LocalDateTime) : void
}

interface EventLogger {
  + append(line : String) : void
}
class FileEventLogger {
  + append(line : String) : void
}

enum MenuCategory
enum MenuData
enum IceOrHot
enum IceAmount
class OrderItem {
  - menuData : MenuData
  - quantity : int
  - iceOrHot : IceOrHot
  - iceAmount : IceAmount
  - forkCount : int
  + getItemPrice() : int
  + getOption() : String
}
class ShoppingCart {
  - items : List<OrderItem>
  + addItem(newItem : OrderItem) : void
  + isEmpty() : boolean
  + getTotalPrice() : int
  + getItems() : List<OrderItem>
  + clear() : void
}
class StoreInfo {
  - storeName : String
  - ownerName : String
  - businessNumber : String
  - telephone : String
  - address : String
  + defaultStore() : StoreInfo
}
class AsyncTaskManager <<ThreadPool>> {
  - executorService : ExecutorService
  + execute(task : Runnable) : void
  + shutdown() : void
}

OrderAction ..|> MainAction
PayAction ..|> MainAction
ExitAction ..|> MainAction
InvalidAction ..|> MainAction
DefaultPay ..|> PaymentService
DefaultLogService ..|> LogService
ContentBuilder ..|> ReceiptBuilder
FileWriter ..|> ReceiptWriter
FileEventLogger ..|> EventLogger

PosController --> ActionContext
PosController --> MainAction : actions map
ActionContext --> InputView
ActionContext --> OutputView
ActionContext --> ShoppingCart
ActionContext --> PaymentService
ActionContext --> LogService
ActionContext --> ReceiptService

DefaultLogService --> EventLogger
ReceiptService --> ReceiptBuilder
ReceiptService --> ReceiptWriter
ReceiptService --> StoreInfo
PayAction ..> AsyncTaskManager : execute(receiptTask)
PayAction ..> AsyncTaskManager : execute(logTask)
ExitAction ..> AsyncTaskManager : shutdown()
AsyncTaskManager ..> ReceiptService : run in worker thread
AsyncTaskManager ..> LogService : run in worker thread

ShoppingCart "1" o-- "*" OrderItem
OrderItem --> MenuData
OrderItem --> IceOrHot
OrderItem --> IceAmount
MenuData --> MenuCategory

note right of AsyncTaskManager
  ExecutorService / Thread Pool
  background worker threads
end note
@enduml
